Archive2/26/7f61e3ea820bfe/output
main.cpp:10:37: error: variable or field 'pop' declared void
 template<typename ...Tail> void pop(Stack<VLAN>&, VLANDecoder vlandec, Tail... tail);
                                     ^
main.cpp:10:37: error: 'Stack' was not declared in this scope
main.cpp:10:43: error: 'VLAN' was not declared in this scope
 template<typename ...Tail> void pop(Stack<VLAN>&, VLANDecoder vlandec, Tail... tail);
                                           ^
main.cpp:10:49: error: expected primary-expression before ',' token
 template<typename ...Tail> void pop(Stack<VLAN>&, VLANDecoder vlandec, Tail... tail);
                                                 ^
main.cpp:10:63: error: expected primary-expression before 'vlandec'
 template<typename ...Tail> void pop(Stack<VLAN>&, VLANDecoder vlandec, Tail... tail);
                                                               ^
main.cpp:10:76: error: expected primary-expression before '...' token
 template<typename ...Tail> void pop(Stack<VLAN>&, VLANDecoder vlandec, Tail... tail);
                                                                            ^
main.cpp:11:37: error: variable or field 'pop' declared void
 template<typename ...Tail> void pop(Stack<IPv4>&, IPv4Decoder ipdec, Tail... dec);
                                     ^
main.cpp:11:37: error: 'Stack' was not declared in this scope
main.cpp:11:43: error: 'IPv4' was not declared in this scope
 template<typename ...Tail> void pop(Stack<IPv4>&, IPv4Decoder ipdec, Tail... dec);
                                           ^
main.cpp:11:49: error: expected primary-expression before ',' token
 template<typename ...Tail> void pop(Stack<IPv4>&, IPv4Decoder ipdec, Tail... dec);
                                                 ^
main.cpp:11:63: error: expected primary-expression before 'ipdec'
 template<typename ...Tail> void pop(Stack<IPv4>&, IPv4Decoder ipdec, Tail... dec);
                                                               ^
main.cpp:11:74: error: expected primary-expression before '...' token
 template<typename ...Tail> void pop(Stack<IPv4>&, IPv4Decoder ipdec, Tail... dec);
                                                                          ^
main.cpp:12:37: error: variable or field 'pop' declared void
 template<typename ...Tail> void pop(Stack<IPv6>&, IPv6Decoder ipdec, Tail... dec);
                                     ^
main.cpp:12:37: error: 'Stack' was not declared in this scope
main.cpp:12:43: error: 'IPv6' was not declared in this scope
 template<typename ...Tail> void pop(Stack<IPv6>&, IPv6Decoder ipdec, Tail... dec);
                                           ^
main.cpp:12:49: error: expected primary-expression before ',' token
 template<typename ...Tail> void pop(Stack<IPv6>&, IPv6Decoder ipdec, Tail... dec);
                                                 ^
main.cpp:12:63: error: expected primary-expression before 'ipdec'
 template<typename ...Tail> void pop(Stack<IPv6>&, IPv6Decoder ipdec, Tail... dec);
                                                               ^
main.cpp:12:74: error: expected primary-expression before '...' token
 template<typename ...Tail> void pop(Stack<IPv6>&, IPv6Decoder ipdec, Tail... dec);
                                                                          ^
main.cpp:18:10: error: variable or field 'pop' declared void
 void pop(StackT& stackt, Stack<Ethernet>& stack, EthernetDecoder ethdec)
          ^
main.cpp:18:10: error: 'StackT' was not declared in this scope
main.cpp:18:18: error: 'stackt' was not declared in this scope
 void pop(StackT& stackt, Stack<Ethernet>& stack, EthernetDecoder ethdec)
                  ^
main.cpp:18:26: error: 'Stack' was not declared in this scope
 void pop(StackT& stackt, Stack<Ethernet>& stack, EthernetDecoder ethdec)
                          ^
main.cpp:18:32: error: 'Ethernet' was not declared in this scope
 void pop(StackT& stackt, Stack<Ethernet>& stack, EthernetDecoder ethdec)
                                ^
main.cpp:18:43: error: 'stack' was not declared in this scope
 void pop(StackT& stackt, Stack<Ethernet>& stack, EthernetDecoder ethdec)
                                           ^
main.cpp:18:66: error: expected primary-expression before 'ethdec'
 void pop(StackT& stackt, Stack<Ethernet>& stack, EthernetDecoder ethdec)
                                                                  ^
